--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -21,6 +21,8 @@
     "@acme/db": "workspace:*",
     "@auth/core": "0.34.2",
     "@auth/drizzle-adapter": "^1.4.2",
+    "@auth/prisma-adapter": "^2.4.2",
+    "@prisma/client": "5.17.0",
     "@t3-oss/env-nextjs": "^0.11.0",
     "next": "^14.2.5",
     "next-auth": "5.0.0-beta.20",
@@ -34,6 +36,7 @@
     "@acme/tsconfig": "workspace:*",
     "eslint": "catalog:",
     "prettier": "catalog:",
+    "prisma": "^5.17.0",
     "typescript": "catalog:"
   },
   "prettier": "@acme/prettier-config"
